@@ -1,3 +1,7 @@
+2009-02-27  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/GParted_Core.cc: Enabled type checking (const instead of #define)
+
 2009-02-25  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/GParted_Core.cc: Added recognition of /dev/mmcblk* SD/MMC devices.
